--- a/Week 3/poem4c.css
+++ b/Week 3/poem4c.css
@@ -2,15 +2,15 @@ body{
     background:white;
     color:blue;
     padding:25px;
-    font-family:arial;
+    font-family:serif;
 }
 
 h1{
     color:white;
-    font-family:arial;
-    font-style:normal;
+    font-family:serif;
+    font-style:cursive;
     padding: 25px;
-    background-color:fuchsia;
+    background-color:green;
     border:none;
     text-align:center;
     
@@ -28,7 +28,7 @@ h1{
     padding:45px;
     line-height: 25px;
     text-align:center;
-    background-color:fuchsia;
+    background-color:aquamarine;
     
 }
 
