--- a/Week_9/css/styles.css
+++ b/Week_9/css/styles.css
@@ -312,202 +312,45 @@ h6{
     
 }
 
+/*Project Pages*/
 
-/*Hello Kitty*/
+.project-detail {
+  max-width: 1100px;
+  margin: 250px auto;
+  background: red;
+}
 
-.hk-photo{
-    float:left;
-    max-width:350px;
-    margin-left:20%;
-    margin-top:190px;
-    padding:10px;
+.project-images {
+  width: 50%;
+  float: left;
+}
+
+.project-images img {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.project-text {
+  margin-top: 200px;
+  width: 50%;
+  float: left;
+  text-align: center;
+    padding:50px;
 }
 
 
-
-.hkdescription{
-    
-    padding-top:15px;
-    margin-top:250px;
-    max-width:300px;
-    margin-right:200px;
-    float:right;
-    
-}
-.hkdescription p{
-    
-    padding-top:5px;
-    margin-top:5px;
-    text-align:center;
-    
-    
-}
-
-/*Otis Business Card*/
-
-
-.photo-container{
-}
-
-.biz-photo{
-    float:left;
-    max-width:400px;
-    margin-left:20%;
-    margin-top:200px;
-    padding:10px;
-}
-
-.biz-photo2{
-    width:400px;
-    margin-left:20%;
-    padding:10px;
-    float:left;
-}
-
-.biz-description{
-    float:right;
-    margin-right:90px;
-    margin-top:-150px;
-    width:375px;
-    text-align:center;
-    line-height:1.4;
-
-}
-
-/*Talleres Publicos*/
-
-
-.talleres-1{
-    float:left;
-    max-width:400px;
-    margin-left:20%;
-    margin-top:200px;
-    padding:10px;
-}
-
-.talleres-2{
-    max-width:400px;
-    margin-left:20%;
-    padding:10px;
-    float:left;
-}
-
-.talleres-3{
-    max-width:400px;
-    margin-left:20%;
-    padding:10px;
-    float:left;
-}
-
-.talleres-description{
-    float:right;
-    margin-right:120px;
-    margin-top:-500px;
-    max-width:400px;
-    text-align:center;
-    line-height:1.4;
-
-}
-
-/*Ceremony Publication*/
-
-.ceremony-1{
-    float:left;
-    max-width:400px;
-    margin-left:20%;
-    margin-top:200px;
-    padding:10px;
-}
-
-.ceremony-description{
-    float:right;
-    margin-right:150px;
-    margin-top:220px;
-    max-width:370px;
-    text-align:center;
-    line-height:1.4;
-
-}
-
-
-/*Bollywood*/
-
-.bollywood-1{
-    float:left;
-    max-width:400px;
-    margin-left:20%;
-    margin-top:200px;
-    padding:10px;
-}
-
-.bollywood-description{
-    float:right;
-    margin-right:150px;
-    margin-top:275px;
-    max-width:370px;
-    text-align:center;
-    line-height:1.4;
-
-}
-
-/*mentorship*/
-
-.mentorship-1{
-    float:left;
-    max-width:400px;
-    margin-left:20%;
-    margin-top:200px;
-    padding:10px;
-}
-
-.mentorship-2{
-    max-width:400px;
-    margin-left:20%;
-    padding:10px;
-    float:left;
-}
-
-.mentorship-3{
-    max-width:400px;
-    margin-left:20%;
-    padding:10px;
-    float:left;
-}
-
-.mentorship-description{
-    float:right;
-    margin-right:120px;
-    margin-top:-500px;
-    max-width:400px;
-    text-align:center;
-    line-height:1.4;
-
-}
-/*General Layout*/
-
-
-
-
-
-}
 /*Media Queries*/
 
 
-
-
-@media screen and (min-width: 480px){
-
-    body{
-        background-color:yellow;
-    }
-    
-    .grid-item{
-        border: 3px solid red;
-    }
-        
-            
-    }
-    
+@media only screen and (max-width: 768px) {
+  .project-images,
+  .project-text {
+    width: 100%;
+  }
+  .project-text {
+    margin-top: 10px;
+  }
 }
+
 
 
